--- a/.github/workflows/surge_deploy.yaml
+++ b/.github/workflows/surge_deploy.yaml
@@ -5,14 +5,20 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Assigment2
-    steps: 
-      - uses: actions/checkout@v2    
-      - name: installing Node.js
+    name: Deploying to surge
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Node.js
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - name: installing-surge
-        run: npm install -g surge  
-      - name: run surge
-        run: surge ./build assigment3_daniyal_sadiq.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
+      - name: Build React App
+        run: yarn build
+      - name: Install Surge
+        run: npm install -g surge
+      - name: Run surge
+        run: surge ./build assigment3_daniyal.surge.sh --token ${{ secrets.SURGE_TOKEN }}
